Adding logging files and further updates

--- a/notebooks/01_ingest_raw_to_bronze.ipynb
+++ b/notebooks/01_ingest_raw_to_bronze.ipynb
@@ -7,6 +7,141 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4d37e129-37c5-4cbc-8800-790b35c7092e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "USE CATALOG hive_metastore;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3ec3bdd2-9a56-4fc5-a3dd-39a292c8f5fa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run ./05_Logging_Utility\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "29ed1b80-74b6-4c50-9693-18691b9d019e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT current_database();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0493fb1f-3518-4819-b2a8-f7e843240aee",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SHOW TABLES IN mini_proj_logs;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "02633f2e-b1db-45ea-8646-1d1c32a7344c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DESCRIBE DETAIL mini_proj_logs.etl_log;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6233433e-8f73-4a8b-9bfa-31aaba3a3446",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.table(\"mini_proj_logs.etl_log\").show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
       "rowLimit": 10000
      },
      "inputWidgets": {},
@@ -32,11 +167,11 @@
     "# -----------------------------\n",
     "# 1. File Paths\n",
     "# -----------------------------\n",
-    "patient_src_path = \"dbfs:/FileStore/Mini_Project/Source_data/Patient_Source.csv\"\n",
-    "insurance_src_path = \"dbfs:/FileStore/Mini_Project/Source_data/Insurance_Source.csv\"\n",
+    "patient_src_path = \"s3a://mini-project-sathwik/raw/patient/Patient_Source.csv\"\n",
+    "insurance_src_path = \"s3a://mini-project-sathwik/raw/insurance/Insurance_Source.csv\"\n",
     "\n",
-    "bronze_patient_path = \"dbfs:/FileStore/Mini_Project/bronze/patient_bronze\"\n",
-    "bronze_insurance_path = \"dbfs:/FileStore/Mini_Project/bronze/insurance_bronze\"\n"
+    "bronze_patient_path = \"s3a://mini-project-sathwik/bronze/patient_bronze\"\n",
+    "bronze_insurance_path = \"s3a://mini-project-sathwik/bronze/insurance_bronze\"\n"
    ]
   },
   {
@@ -89,17 +224,41 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import current_timestamp, input_file_name\n",
-    "\n",
-    "df_patient_raw = (\n",
-    "    spark.read.csv(\n",
-    "        \"dbfs:/FileStore/Mini_Project/Source_data/Patient_Source.csv\",\n",
-    "        schema=patient_schema,\n",
-    "        header=True\n",
+    "from pyspark.sql.functions import current_timestamp, input_file_name, monotonically_increasing_id\n",
+    "from datetime import date\n",
+    "batch_id = date.today().strftime(\"%Y-%m-%d\")\n",
+    "try:\n",
+    "    df_patient_raw = (\n",
+    "        spark.read.csv(\n",
+    "            \"s3a://mini-project-sathwik/raw/patient/Patient_Source.csv\",\n",
+    "            schema=patient_schema,\n",
+    "            header=True\n",
+    "        )\n",
+    "        .withColumn(\"ingest_time\", current_timestamp())\n",
+    "        .withColumn(\"source_file\", input_file_name())\n",
+    "        .withColumn(\"row_sequence\", monotonically_increasing_id())\n",
     "    )\n",
-    "    .withColumn(\"ingest_time\", current_timestamp())\n",
-    "    .withColumn(\"source_file\", input_file_name())\n",
-    ")\n"
+    "    count=df_patient_raw.count()\n",
+    "    log_etl(\n",
+    "        pipeline_name=\"Patient Bronze Load\",\n",
+    "        batch_id=batch_id,\n",
+    "        file_name=\"patient_source_batch1.csv\",\n",
+    "        layer=\"bronze\",\n",
+    "        status=\"SUCCESS\",\n",
+    "        row_count=count,\n",
+    "        message=\"Bronze load completed.\"\n",
+    "    )\n",
+    "except Exception as e:\n",
+    "    log_etl(\n",
+    "        pipeline_name=\"Patient Bronze Load\",\n",
+    "        batch_id=batch_id,\n",
+    "        file_name=\"patient_source_batch1.csv\",\n",
+    "        layer=\"bronze\",\n",
+    "        status=\"FAILED\",\n",
+    "        row_count=0,\n",
+    "        message=str(e)\n",
+    "    )\n",
+    "    raise e"
    ]
   },
   {
@@ -218,7 +377,7 @@
     "spark.sql(\"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS patient_bronze\n",
     "    USING DELTA\n",
-    "    LOCATION 'dbfs:/FileStore/Mini_Project/bronze/patient_bronze'\n",
+    "    LOCATION 's3a://mini-project-sathwik/bronze/patient_bronze'\n",
     "\"\"\")\n",
     "\n",
     "print(\"Patient Bronze Table Created Successfully.\")"
@@ -293,15 +452,60 @@
     "# -----------------------------\n",
     "# 4. Read Raw Insurance File\n",
     "# -----------------------------\n",
-    "df_insurance_raw = (\n",
-    "    spark.read\n",
-    "         .option(\"header\", True)\n",
-    "         .option(\"inferSchema\", True)\n",
-    "         .csv(insurance_src_path)\n",
-    "         .withColumn(\"ingest_time\", current_timestamp())\n",
-    "         .withColumn(\"source_file\", input_file_name())\n",
-    ")\n",
-    "\n",
+    "from datetime import date\n",
+    "batch_id = date.today().strftime(\"%Y-%m-%d\")\n",
+    "try:\n",
+    "    df_insurance_raw = (\n",
+    "        spark.read\n",
+    "            .option(\"header\", True)\n",
+    "            .option(\"inferSchema\", True)\n",
+    "            .csv(insurance_src_path)\n",
+    "            .withColumn(\"ingest_time\", current_timestamp())\n",
+    "            .withColumn(\"source_file\", input_file_name())\n",
+    "            .withColumn(\"row_sequence\", monotonically_increasing_id())\n",
+    "    )\n",
+    "    count=df_insurance_raw.count()\n",
+    "    log_etl(\n",
+    "        pipeline_name=\"Insurance Bronze Load\",\n",
+    "        batch_id=batch_id,\n",
+    "        file_name=\"insurance_source_batch1.csv\",\n",
+    "        layer=\"bronze\",\n",
+    "        status=\"SUCCESS\",\n",
+    "        row_count=count,\n",
+    "        message=\"Bronze load completed.\"\n",
+    "    )\n",
+    "except Exception as e:\n",
+    "    log_etl(\n",
+    "        pipeline_name=\"Insurance Bronze Load\",\n",
+    "        batch_id=batch_id,\n",
+    "        file_name=\"insurance_source_batch1.csv\",\n",
+    "        layer=\"bronze\",\n",
+    "        status=\"FAILED\",\n",
+    "        row_count=0,\n",
+    "        message=str(e)\n",
+    "    )\n",
+    "    raise e\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e8ab4c38-2cbc-4e84-bd42-1cbe02c40bc8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "print(\"Insurance_RAW Schema:\")\n",
     "df_insurance_raw.printSchema()"
    ]
@@ -373,7 +577,7 @@
     "spark.sql(\"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS insurance_bronze\n",
     "    USING DELTA\n",
-    "    LOCATION 'dbfs:/FileStore/Mini_Project/bronze/insurance_bronze'\n",
+    "    LOCATION 's3a://mini-project-sathwik/bronze/insurance_bronze'\n",
     "\"\"\")\n",
     "\n",
     "print(\"Insurance Bronze Table Created Successfully.\")"
