--- a/notebooks/03_scd2_merge_gold.ipynb
+++ b/notebooks/03_scd2_merge_gold.ipynb
@@ -10,199 +10,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "09030f6a-2cbf-4b4c-8bc8-23d3bdd655a9",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "-- -- ---------------------------------------------\n",
-    "-- -- 5. Perform SCD-2 MERGE into patient_dim\n",
-    "-- -- ---------------------------------------------\n",
-    "-- MERGE INTO patient_dim AS dim\n",
-    "-- USING patient_final_silver AS src\n",
-    "-- ON dim.patient_id = src.patient_id\n",
-    "-- AND dim.is_current = 'Y'\n",
-    "-- -- ---------------------------------------------\n",
-    "-- -- 5A. Update existing record (close old row)\n",
-    "-- -- ---------------------------------------------\n",
-    "-- WHEN MATCHED AND src.transaction_ind = 'U'\n",
-    "-- THEN UPDATE SET\n",
-    "--     dim.is_current = 'N',\n",
-    "--     dim.effective_end_dt = current_timestamp()\n",
-    "-- -- ---------------------------------------------\n",
-    "-- -- 5B. Insert new version after update\n",
-    "-- -- ---------------------------------------------\n",
-    "-- WHEN NOT MATCHED AND src.transaction_ind = 'U'\n",
-    "-- THEN INSERT (\n",
-    "--       patient_dim_key,\n",
-    "--       patient_id,\n",
-    "--       first_name,\n",
-    "--       last_name,\n",
-    "--       age,\n",
-    "--       address,\n",
-    "--       phone_number,\n",
-    "--       bill_amount,\n",
-    "--       insurance_provider,\n",
-    "--       policy_id,\n",
-    "--       checksum_txt,\n",
-    "--       load_ctl_key,\n",
-    "--       effective_start_dt,\n",
-    "--       effective_end_dt,\n",
-    "--       is_current\n",
-    "-- )\n",
-    "-- VALUES (\n",
-    "--       (SELECT COALESCE(MAX(patient_dim_key), 0) + 1 FROM patient_dim),\n",
-    "--       src.patient_id,\n",
-    "--       src.first_name,\n",
-    "--       src.last_name,\n",
-    "--       src.age,\n",
-    "--       src.address,\n",
-    "--       src.phone_number,\n",
-    "--       src.bill_amount,\n",
-    "--       src.insurance_provider,\n",
-    "--       src.policy_id,\n",
-    "--       src.checksum_txt,\n",
-    "--       src.load_ctl_key,\n",
-    "--       current_timestamp(),\n",
-    "--       '9999-12-31',\n",
-    "--       'Y'\n",
-    "-- )\n",
-    "-- -- ---------------------------------------------\n",
-    "-- -- 5C. Insert new record (Insert case)\n",
-    "-- -- ---------------------------------------------\n",
-    "-- WHEN NOT MATCHED AND src.transaction_ind = 'I'\n",
-    "-- THEN INSERT (\n",
-    "--       patient_dim_key,\n",
-    "--       patient_id,\n",
-    "--       first_name,\n",
-    "--       last_name,\n",
-    "--       age,\n",
-    "--       address,\n",
-    "--       phone_number,\n",
-    "--       bill_amount,\n",
-    "--       insurance_provider,\n",
-    "--       policy_id,\n",
-    "--       checksum_txt,\n",
-    "--       load_ctl_key,\n",
-    "--       effective_start_dt,\n",
-    "--       effective_end_dt,\n",
-    "--       is_current\n",
-    "-- )\n",
-    "-- VALUES (\n",
-    "--       (SELECT COALESCE(MAX(patient_dim_key), 0) + 1 FROM patient_dim),\n",
-    "--       src.patient_id,\n",
-    "--       src.first_name,\n",
-    "--       src.last_name,\n",
-    "--       src.age,\n",
-    "--       src.address,\n",
-    "--       src.phone_number,\n",
-    "--       src.bill_amount,\n",
-    "--       src.insurance_provider,\n",
-    "--       src.policy_id,\n",
-    "--       src.checksum_txt,\n",
-    "--       date_format(current_timestamp(), \"yyyyMMddHHmmss\"),\n",
-    "--       current_timestamp(),\n",
-    "--       '9999-12-31',\n",
-    "--       'Y'\n",
-    "-- );\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "8cb84ac5-bc0a-4d36-b594-7ba0bb21f738",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "-- 5A. Close existing active rows that need update\n",
-    "MERGE INTO patient_dim AS dim\n",
-    "USING patient_final_silver AS src\n",
-    "ON dim.patient_id = src.patient_id\n",
-    "AND dim.is_current = 'Y'\n",
-    "WHEN MATCHED AND src.transaction_ind = 'U'\n",
-    "THEN UPDATE SET\n",
-    "    dim.is_current = 'N',\n",
-    "    dim.effective_end_dt = current_timestamp();\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "cc19dae7-a25c-4ef7-941f-a30762526331",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "INSERT INTO patient_dim (\n",
-    "      patient_id,\n",
-    "      first_name,\n",
-    "      last_name,\n",
-    "      age,\n",
-    "      address,\n",
-    "      phone_number,\n",
-    "      bill_amount,\n",
-    "      insurance_provider,\n",
-    "      policy_id,\n",
-    "      checksum_txt,\n",
-    "      load_ctl_key,\n",
-    "      effective_start_dt,\n",
-    "      effective_end_dt,\n",
-    "      is_current\n",
-    ")\n",
-    "SELECT\n",
-    "    src.patient_id,\n",
-    "    src.first_name,\n",
-    "    src.last_name,\n",
-    "    src.age,\n",
-    "    src.address,\n",
-    "    src.phone_number,\n",
-    "    src.bill_amount,\n",
-    "    src.insurance_provider,\n",
-    "    src.policy_id,\n",
-    "    src.checksum_txt,\n",
-    "    src.load_ctl_key,\n",
-    "    current_timestamp() AS effective_start_dt,\n",
-    "    TIMESTAMP('9999-12-31 00:00:00') AS effective_end_dt,\n",
-    "    'Y' AS is_current\n",
-    "FROM patient_final_silver src\n",
-    "WHERE src.transaction_ind IN ('I', 'U');\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a3e07c5a-5c24-4fdc-ab99-bf7de4f457b6",
+     "nuid": "4faf85fa-e3b3-495c-8ff4-10c36a4f8adf",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -211,79 +19,202 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- ---------------------------------------------\n",
-    "-- 5. Perform SCD-2 MERGE into insurance_dim\n",
-    "-- ---------------------------------------------\n",
-    "MERGE INTO insurance_dim AS dim\n",
-    "USING insurance_final_silver AS src\n",
-    "ON dim.policy_id = src.policy_id\n",
-    "AND dim.is_current = 'Y'\n",
+    "USE CATALOG hive_metastore;\n",
+    "USE SCHEMA default;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d9716ff8-cf48-4707-a89d-335d44e482e5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "CREATE OR REPLACE TABLE patient_dim\n",
+    "USING DELTA \n",
+    "LOCATION 's3a://mini-project-sathwik/gold/patient_dim'\n",
+    "AS\n",
+    "SELECT\n",
+    "    -- Surrogate Key\n",
+    "    ROW_NUMBER() OVER (ORDER BY patient_id) AS patient_sk,\n",
+    "    -- Business Key\n",
+    "    patient_id,\n",
     "\n",
-    "-- ---------------------------------------------\n",
-    "-- 5A. Update existing record (close old row)\n",
-    "-- ---------------------------------------------\n",
-    "WHEN MATCHED AND src.transaction_ind = 'U'\n",
-    "THEN UPDATE SET\n",
-    "    dim.is_current = 'N',\n",
-    "    dim.effective_end_dt = current_timestamp()\n",
+    "    -- Attributes\n",
+    "    first_name,\n",
+    "    last_name,\n",
+    "    name,\n",
+    "    age,\n",
+    "    address,\n",
+    "    phone_number,\n",
+    "    bill_amount,\n",
+    "    insurance_provider,\n",
+    "    policy_id,\n",
     "\n",
-    "-- ---------------------------------------------\n",
-    "-- 5B. Insert new version after update (Update case)\n",
-    "-- ---------------------------------------------\n",
-    "WHEN NOT MATCHED AND src.transaction_ind = 'U'\n",
-    "THEN INSERT (\n",
-    "      insurance_dim_key,\n",
-    "      policy_id,\n",
-    "      insurance_provider,\n",
-    "      amount_covered,\n",
-    "      claim_status,\n",
-    "      checksum_txt,\n",
-    "      load_ctl_key,\n",
-    "      effective_start_dt,\n",
-    "      effective_end_dt,\n",
-    "      is_current\n",
-    ")\n",
-    "VALUES (\n",
-    "      (SELECT COALESCE(MAX(insurance_dim_key), 0) + 1 FROM insurance_dim),\n",
-    "      src.policy_id,\n",
-    "      src.insurance_provider,\n",
-    "      src.amount_covered,\n",
-    "      src.claim_status,\n",
-    "      src.checksum_txt,\n",
-    "      src.load_ctl_key,\n",
-    "      current_timestamp(),\n",
-    "      '9999-12-31',\n",
-    "      'Y'\n",
-    ")\n",
+    "    -- SCD-2 Fields\n",
+    "    start_date,\n",
+    "    end_date,\n",
     "\n",
-    "-- ---------------------------------------------\n",
-    "-- 5C. Insert new record (Insert case)\n",
-    "-- ---------------------------------------------\n",
-    "WHEN NOT MATCHED AND src.transaction_ind = 'I'\n",
-    "THEN INSERT (\n",
-    "      insurance_dim_key,\n",
-    "      policy_id,\n",
-    "      insurance_provider,\n",
-    "      amount_covered,\n",
-    "      claim_status,\n",
-    "      checksum_txt,\n",
-    "      load_ctl_key,\n",
-    "      effective_start_dt,\n",
-    "      effective_end_dt,\n",
-    "      is_current\n",
-    ")\n",
-    "VALUES (\n",
-    "      (SELECT COALESCE(MAX(insurance_dim_key), 0) + 1 FROM insurance_dim),\n",
-    "      src.policy_id,\n",
-    "      src.insurance_provider,\n",
-    "      src.amount_covered,\n",
-    "      src.claim_status,\n",
-    "      src.checksum_txt,\n",
-    "      date_format(current_timestamp(), \"yyyyMMddHHmmss\"),\n",
-    "      current_timestamp(),\n",
-    "      '9999-12-31',\n",
-    "      'Y'\n",
-    ");\n"
+    "    CASE WHEN end_date = '9999-12-31' THEN 'Y' ELSE 'N' END AS is_current,\n",
+    "    activation_ind,\n",
+    "\n",
+    "    -- Audit\n",
+    "    ingest_time,\n",
+    "    source_file,\n",
+    "    create_timestamp,\n",
+    "    update_timestamp,\n",
+    "    load_ctl_key,\n",
+    "    checksum_txt\n",
+    "\n",
+    "FROM patient_final_silver;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "aff7da8b-a5bd-4f91-9310-1fc2afb7a862",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "create or replace view patient_dim_view AS\n",
+    "SELECT * FROM patient_dim;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "03896465-ae40-44ae-850d-e85daed49505",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from patient_dim_view;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "579921c8-bc11-404b-ba23-960be35faebd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE OR REPLACE TABLE insurance_dim\n",
+    "USING DELTA \n",
+    "AS\n",
+    "SELECT\n",
+    "    -- Surrogate Key\n",
+    "   ROW_NUMBER() OVER (ORDER BY policy_id) AS insurance_sk\n",
+    ",\n",
+    "\n",
+    "    -- Business Key\n",
+    "    policy_id,\n",
+    "\n",
+    "    -- Attributes\n",
+    "    insurance_provider,\n",
+    "    amount_covered,\n",
+    "    claim_status,\n",
+    "    -- SCD-2 Fields\n",
+    "    start_date,\n",
+    "    end_date,\n",
+    "    CASE WHEN end_date = '9999-12-31' THEN 'Y' ELSE 'N' END AS is_current,\n",
+    "    activation_ind,\n",
+    "\n",
+    "    -- Audit / Lineage\n",
+    "    ingest_time,\n",
+    "    source_file,\n",
+    "    create_timestamp,\n",
+    "    update_timestamp,\n",
+    "    load_ctl_key,\n",
+    "    checksum_txt\n",
+    "\n",
+    "FROM insurance_final_silver;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "850b78b8-4c47-42a9-837a-311e13879893",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "create or replace view insurance_dim_view as \n",
+    "select * from insurance_dim;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c6f43585-4060-4631-84d3-e7bad5a570d1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select * from insurance_dim_view;"
    ]
   },
   {
@@ -304,9 +235,32 @@
    },
    "outputs": [],
    "source": [
-    "SELECT patient_id, is_current, effective_start_dt, effective_end_dt\n",
-    "FROM patient_dim\n",
-    "ORDER BY patient_id, effective_start_dt;\n"
+    "-- SELECT patient_id, is_current, effective_start_dt, effective_end_dt\n",
+    "-- FROM patient_dim\n",
+    "-- ORDER BY patient_id, effective_start_dt;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "246a189e-4be5-4cc4-b79f-97d43afa8860",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- SELECT policy_id, is_current, effective_start_dt, effective_end_dt\n",
+    "-- FROM insurance_dim\n",
+    "-- ORDER BY policy_id, effective_start_dt;"
    ]
   }
  ],
