--- a/notebooks/04_validation_queries.ipynb
+++ b/notebooks/04_validation_queries.ipynb
@@ -10,6 +10,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "fc1ce39b-5147-45d1-a475-e602dd7746c7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use catalog hive_metastore;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "9f143ac1-d01f-484a-a1ec-43af56b8f34e",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -18,8 +39,14 @@
    },
    "outputs": [],
    "source": [
+    "-- DROP ALL TABLES\n",
+    "DROP TABLE IF EXISTS patient_final_silver;\n",
     "DROP TABLE IF EXISTS patient_dim;\n",
-    "DROP TABLE IF EXISTS insurance_dim;"
+    "\n",
+    "DROP TABLE IF EXISTS insurance_final_silver;\n",
+    "DROP TABLE IF EXISTS insurance_dim;\n",
+    "\n",
+    "DROP TABLE IF EXISTS mini_proj_logs.etl_log;\n"
    ]
   },
   {
@@ -32,7 +59,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "27c17ff3-25f0-49a4-b42a-6776e86a8782",
+     "nuid": "aeab9809-3729-4bb9-9343-b24a6d6a96bc",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -40,8 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "%python\n",
-    "dbutils.fs.rm(\"dbfs:/FileStore/Mini_Project/dim/patient_dim\", True)\n"
+    "DROP TABLE IF EXISTS mini_proj_logs.etl_log;"
    ]
   },
   {
@@ -54,51 +80,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "4cdfa25f-abff-46eb-b89a-182920683a79",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%python\n",
-    "dbutils.fs.rm(\"dbfs:/FileStore/Mini_Project/dim/insurance_dim\", True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "f147dbbd-e189-40f6-aad8-10f6a2e68e34",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%python\n",
-    "dbutils.fs.ls(\"dbfs:/FileStore/Mini_Project/dim\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "52e320f1-d7f8-4191-856f-b14fa6666d88",
+     "nuid": "d6be6639-e52f-4cfe-966d-a4d360d7d7c9",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -108,21 +90,44 @@
    "source": [
     "%python\n",
     "paths = [\n",
-    "    \"dbfs:/FileStore/Mini_Project/bronze/patient_bronze\",\n",
-    "    \"dbfs:/FileStore/Mini_Project/bronze/insurance_bronze\",\n",
-    "    \"dbfs:/FileStore/Mini_Project/silver/patient_silver\",\n",
-    "    \"dbfs:/FileStore/Mini_Project/silver/insurance_silver\",\n",
-    "    \"dbfs:/FileStore/Mini_Project/silver_final/patient_final_silver\",\n",
-    "    \"dbfs:/FileStore/Mini_Project/silver_final/insurance_final_silver\",\n",
-    "    \"dbfs:/FileStore/Mini_Project/dim/patient_dim\",\n",
-    "    \"dbfs:/FileStore/Mini_Project/dim/insurance_dim\",\n",
-    "    \"dbfs:/FileStore/Mini_Project/landing/patient_landing\",\n",
-    "    \"dbfs:/FileStore/Mini_Project/landing/insurance_landing\"\n",
+    "    \"s3a://mini-project-sathwik/bronze/patient_bronze\",\n",
+    "    \"s3a://mini-project-sathwik/bronze/insurance_bronze\",\n",
+    "    \n",
+    "    \"s3a://mini-project-sathwik/silver/patient_prefinal_silver\",\n",
+    "    \"s3a://mini-project-sathwik/silver/patient_final_silver\",\n",
+    "    \"s3a://mini-project-sathwik/gold/patient_dim\",\n",
+    "    \n",
+    "    \"s3a://mini-project-sathwik/silver/insurance_prefinal_silver\",\n",
+    "    \"s3a://mini-project-sathwik/silver/insurance_final_silver\",\n",
+    "    \"s3a://mini-project-sathwik/gold/insurance_dim\",\n",
+    "\n",
+    "    \"s3a://mini-project-sathwik/logs/etl_log\"\n",
     "]\n",
     "\n",
     "for p in paths:\n",
-    "    dbutils.fs.rm(p, True)\n",
-    "    print(\"Deleted:\", p)\n"
+    "    dbutils.fs.rm(p, recurse=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "97b8c714-0257-4928-b431-df87b0e8cfc3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "dbutils.fs.ls(\"s3a://mini-project-sathwik/logs/\")\n"
    ]
   },
   {
@@ -328,21 +333,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "------------------------------------------------------------\n",
-    "-- 7. Compare Silver → Gold Checksum Differences\n",
-    "------------------------------------------------------------\n",
-    "-- Ensure values that changed in Silver truly created new version in Gold\n",
-    "SELECT s.patient_id, \n",
-    "       s.checksum_txt AS silver_checksum,\n",
-    "       d.checksum_txt AS gold_checksum,\n",
-    "       d.is_current,\n",
-    "       d.effective_start_dt\n",
-    "FROM patient_silver s\n",
-    "LEFT JOIN patient_dim d\n",
-    "ON s.patient_id = d.patient_id\n",
-    "ORDER BY patient_id;"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -372,6 +363,94 @@
     "\n",
     "------------------------------------------------------------\n",
     "--"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5065effd-f180-4363-b645-7362831c854c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT policy_id, is_current, effective_end_dt\n",
+    "FROM insurance_dim\n",
+    "ORDER BY policy_id, effective_end_dt;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ba712ff5-9f89-49a4-b548-1af7e8f3a1a1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SHOW TABLES LIKE 'etl_log';\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "85e97845-a99d-46c4-8646-2c4d1226675d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "spark.table(\"etl_log\").show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5d0356ff-1f4c-42c9-9afa-0e62962136b4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    " %sql\n",
+    "SELECT * FROM etl_log ORDER BY log_id DESC;\n"
    ]
   }
  ],
